--- a/nuxt/front/assets/_variable.scss
+++ b/nuxt/front/assets/_variable.scss
@@ -5,4 +5,5 @@ $font-color: rgb(133, 133, 133);
 $font-strong: rgb(37, 37, 37);
 $main-color-weak: rgba($main-color, 0.2);
 $sidebar-width: 280px;
-$article-card-radius: 10px;
+$article-card-radius: 4px;
+$book-card-radius: 4px;
