create book index page

--- a/nuxt/front/assets/main.scss
+++ b/nuxt/front/assets/main.scss
@@ -9,6 +9,9 @@ body {
   display: flex;
   .content {
     width: calc(100% - #{$sidebar-width});
+    &.book {
+      width: calc(100% - #{$navbar-width});
+    }
     .wrapper {
       min-width: 1200px;
       margin: 0 calc((100% - 1200px) / 2);
